<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">postly</string>
    <string name="login_to_postly">Log in to Postly</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Log in</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_account">Create Account</string>
    <string name="back_to_login">Back to Login</string>
    <string name="forgot_my_password">Forgot my password</string>
</resources>